# score-addon-deuterium

./: CMakeLists.txt  score_addon_deuterium.cpp  score_addon_deuterium.hpp
.github/workflows/: builds.yaml
Deuterium/: Drumkit.cpp  Drumkit.hpp  Library.hpp  ProcessFactory.hpp  ProcessMetadata.hpp  ProcessModel.cpp  ProcessModel.hpp  ProcessModelSerialization.cpp
Deuterium/Commands/: CommandFactory.cpp  CommandFactory.hpp
Deuterium/Executor/: Component.cpp  Component.hpp
